--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,14 +274,25 @@ section {
     font-size: 16px;
 }
 .service-grid-container {
+    max-width: 940px;
+    margin: 0 auto;
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 100px);
+    grid-gap: 10px;
+    grid-auto-flow: column;
 }
 .service-grid-item {
-    width: 200px;
-    height: 50px;
     background-color: orange;
     border: solid;
+    padding: 1em;
     color: black;
+}
+.box1 {
+    grid-column-start: 1;
+    grid-column-end: 2; 
+    grid-row-start: 1; 
+    grid-row-end: 3; 
 }
 @media screen and (max-width: 980px) {
     header {
