--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ section {
     border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
-    top: 1px;
+    top: 5;
     transform: rotate(-58deg);
 }
 .checkbox-wrapper input + label::after, .radio-wrapper input + label::after {
@@ -268,6 +268,7 @@ section {
     background: var(--secondary-color);
     color: var(--primary-color);
     flex: 1;
+
 }
 .trainers {
     width: 100%;
@@ -276,8 +277,57 @@ section {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.trainer img {
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+    background-size: cover;
+    overflow: hidden;
+  }
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+    background-size: cover;
+    overflow: hidden;
+}
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+    background-size: cover;
+    overflow: hidden;
+}
+.trainer-img {
+    position: relative;
     width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+}
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(252, 225, 56, 0.3), var(--secondary-color));
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.5s;
+}
+.trainer-img h3 {
+    position: relative;
+    z-index: 0002;
+    top: 200px;
+    transition: 0.6s;
+}
+.trainer-img h4 {
+    position: relative;
+    z-index: 0001;
+    top: 200px;
+    transition: 1s;
+}
+.trainer:hover .trainer-img::after{
+    opacity: 1;
+}
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
 }
 .trainer-bio {
     padding: 25px;
@@ -294,11 +344,13 @@ section {
 }
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }  
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
+    display: none;
 }
 .trainer-bio p {
     font-size: 17px;
@@ -496,6 +548,21 @@ section {
         writing-mode: unset;
         grid-column: 1 / -1;
         grid-row: -1;
+    }
+    .trainer-img h3 {
+        display: none;
+    }
+    .trainer-img h4 {
+        display: none;
+    }
+    .trainer-img::after {
+        display: none;
+    }
+    .trainer-bio h3 {
+        display: block;
+    }
+    .trainer-bio h4 {
+        display: block;
     }
 }
 @media screen and (max-width: 575px) {
